--- a/environment.yml
+++ b/environment.yml
@@ -121,6 +121,7 @@ dependencies:
   - pip:
     - dominate==2.6.0
     - flask-bootstrap==3.3.7.1
+    - metapype==0.0.3
     - recordclass==0.14.3
     - rfc3986==1.5.0
     - visitor==0.1.3
