Add logging to local file

--- a/deployment/umbra.ini
+++ b/deployment/umbra.ini
@@ -10,5 +10,7 @@ socket = /tmp/umbra.sock
 chmod-socket = 660
 vacuum = true
 buffer-size = 65535
+logger = file:logfile=/home/pasta/umbra/log/uwsgi.log,maxsize=2000000
+log-format = %(addr) - %(user) [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(size) "%(referer)" "%(uagent)"
 
 die-on-term = true
