--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,82 @@
-blis==0.7.4
-brotlipy==0.7.0
-cachetools==4.2.2
-catalogue==2.0.4
-certifi==2021.5.30
-cffi==1.14.6
-chardet==4.0.0
-charset-normalizer==2.0.0
-click==7.1.2
-colorama==0.4.4
-cryptography==3.4.7
-cycler==0.10.0
-cymem==2.0.5
-cytoolz==0.11.0
+annotated-types==0.7.0
+blinker==1.8.2
+blis==0.7.10
+Brotli==1.1.0
+cachetools==5.5.0
+catalogue==2.0.10
+certifi==2024.8.30
+cffi==1.17.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.16.0
+colorama==0.4.6
+confection==0.1.4
+cymem==2.0.8
+cytoolz==0.12.3
 daiquiri==3.0.0
-decorator==5.0.9
-dominate==2.6.0
-Flask==2.0.1
+dominate==2.9.1
+Flask==3.0.3
 Flask-Bootstrap==3.3.7.1
-idna==3.1
-itsdangerous==2.0.1
-jellyfish==0.8.2
-Jinja2==3.0.1
-joblib==1.0.1
-kiwisolver==1.3.1
-lxml==4.6.3
-MarkupSafe==2.0.1
-matplotlib==3.4.2
-metapype==0.0.3
-multidict==5.1.0
-murmurhash==1.0.5
-networkx==2.5
-numpy==1.21.0
-olefile==0.46
-packaging==21.0
-pathy==0.6.0
-Pillow==8.3.1
-pip==21.1.3
-preshed==3.0.5
-psycopg2==2.9.1
-pycparser==2.20
-pydantic==1.8.2
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-pyphen==0.11.0
+floret==0.10.5
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
+idna==3.8
+importlib_metadata==8.4.0
+itsdangerous==2.2.0
+jellyfish==1.1.0
+Jinja2==3.1.4
+joblib==1.4.2
+langcodes==3.4.0
+language_data==1.2.0
+lxml==5.3.0
+marisa-trie==1.1.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+metapype==0.1.1
+multidict==6.0.5
+murmurhash==1.0.10
+networkx==3.3
+numpy==1.26.4
+packaging==24.1
+pip==24.2
+preshed==3.0.9
+psycopg2==2.9.9
+pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
+Pygments==2.18.0
+pyphen==0.16.0
 PySocks==1.7.1
-python-dateutil==2.8.2
-python-json-logger==2.0.1
-recordclass==0.14.3
-requests==2.26.0
-rfc3986==1.5.0
-scikit-learn==0.24.2
-scipy==1.7.0
-setuptools==49.6.0.post20210108
-shellingham==1.4.0
-six==1.16.0
-smart-open==5.1.0
-spacy==3.1.0
-spacy-legacy==3.0.8
-srsly==2.4.1
-textacy==0.11.0
-thinc==8.0.7
-threadpoolctl==2.2.0
-toolz==0.11.1
-tornado==6.1
-tqdm==4.61.2
-typer==0.3.2
-typing-extensions==3.10.0.0
-urllib3==1.26.6
-uWSGI==2.0.19.1
+python-json-logger==2.0.7
+recordclass==0.22.1
+requests==2.32.3
+rfc3986==2.0.0
+rich==13.7.1
+scikit-learn==1.5.1
+scipy==1.14.1
+setuptools==72.2.0
+shellingham==1.5.4
+smart-open==6.4.0
+spacy==3.7.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+textacy==0.13.0
+thinc==8.2.5
+threadpoolctl==3.5.0
+toolz==0.12.1
+tqdm==4.66.5
+typer==0.9.4
+typing_extensions==4.12.2
+Unidecode==1.3.8
+urllib3==2.2.2
+uWSGI==2.0.23
 visitor==0.1.3
-wasabi==0.8.2
-Werkzeug==2.0.1
-wheel==0.36.2
+wasabi==1.1.2
+weasel==0.3.4
+Werkzeug==3.0.4
+wheel==0.44.0
+zipp==3.20.1
+zstandard==0.23.0
