--- a/webapp/config.py.template
+++ b/webapp/config.py.template
@@ -33,6 +33,8 @@ class Config(object):
     RESPONSIBLE_PARTIES_TABLE_NAME = 'eml_files.responsible_parties'
     RESPONSIBLE_PARTIES_RAW_TABLE_NAME = 'eml_files.responsible_parties_raw'
 
+    PASTA_HOST = '<pasta host>'
+
     DB_HOST = 'localhost'
     DB_NAME = 'pasta'
     DB_PASSWORD = '<secret password>'
