--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
 annotated-types==0.7.0
+attrs==24.2.0
 blinker==1.8.2
 blis==0.7.10
 Brotli==1.1.0
@@ -18,6 +22,7 @@ dominate==2.9.1
 Flask==3.0.3
 Flask-Bootstrap==3.3.7.1
 floret==0.10.5
+frozenlist==1.4.1
 h2==4.1.0
 hpack==4.0.0
 hyperframe==6.0.1
@@ -78,5 +83,6 @@ wasabi==1.1.2
 weasel==0.3.4
 Werkzeug==3.0.4
 wheel==0.44.0
+yarl==1.9.7
 zipp==3.20.1
 zstandard==0.23.0
