--- a/webapp/config.py.template
+++ b/webapp/config.py.template
@@ -12,13 +12,18 @@
 :Created:
     7/7/21
 """
+from pathlib import Path
 
 
 class Config(object):
 
     BASE_FOLDER = '<base folder>'
     DATA_FILES_PATH = f'{BASE_FOLDER}/data'
+    if not Path(DATA_FILES_PATH).exists():
+        Path(DATA_FILES_PATH).mkdir()
     EML_FILES_PATH = f'{BASE_FOLDER}/eml_files'
+    if not Path(EML_FILES_PATH).exists():
+        Path(EML_FILES_PATH).mkdir()
     POSSIBLE_DUPS_FILES_PATH = f'{DATA_FILES_PATH}/possible_dups_results'
 
     LOG_FILE = 'umbra.log'
