--- a/environment.yml
+++ b/environment.yml
@@ -3,126 +3,147 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - brotlipy=0.7.0
-  - ca-certificates=2021.5.30
-  - cachetools=4.2.2
-  - catalogue=2.0.4
-  - certifi=2021.5.30
-  - cffi=1.14.6
-  - chardet=4.0.0
-  - charset-normalizer=2.0.0
-  - click=7.1.2
-  - colorama=0.4.4
-  - cryptography=3.4.7
-  - cycler=0.10.0
-  - cymem=2.0.5
-  - cython-blis=0.7.4
-  - cytoolz=0.11.0
-  - daiquiri=3.0.0
-  - dataclasses=0.8
-  - decorator=5.0.9
-  - flask=2.0.1
-  - freetype=2.10.4
-  - icu=68.1
-  - idna=3.1
-  - itsdangerous=2.0.1
-  - jansson=2.13.1
-  - jbig=2.1
-  - jellyfish=0.8.2
-  - jinja2=3.0.1
-  - joblib=1.0.1
-  - jpeg=9d
-  - kiwisolver=1.3.1
-  - krb5=1.19.1
-  - lcms2=2.12
-  - ld_impl_linux-64=2.36.1
-  - lerc=2.2.1
-  - libblas=3.9.0
-  - libcblas=3.9.0
-  - libdeflate=1.7
-  - libedit=3.1.20191231
-  - libffi=3.3
-  - libgcc-ng=9.3.0
-  - libgfortran-ng=9.3.0
-  - libgfortran5=9.3.0
-  - libgomp=9.3.0
-  - libiconv=1.16
-  - liblapack=3.9.0
-  - libopenblas=0.3.15
-  - libpng=1.6.37
-  - libpq=13.3
-  - libstdcxx-ng=9.3.0
-  - libtiff=4.3.0
-  - libwebp-base=1.2.0
-  - libxml2=2.9.12
-  - libxslt=1.1.33
-  - lxml=4.6.3
-  - lz4-c=1.9.3
-  - markupsafe=2.0.1
-  - matplotlib-base=3.4.2
-  - multidict=5.1.0
-  - murmurhash=1.0.5
-  - ncurses=6.2
-  - networkx=2.5
-  - numpy=1.21.0
-  - olefile=0.46
-  - openjpeg=2.4.0
-  - openssl=1.1.1k
-  - packaging=21.0
-  - pathy=0.6.0
-  - pcre=8.45
-  - pillow=8.3.1
-  - pip=21.1.3
-  - preshed=3.0.5
-  - psycopg2=2.9.1
-  - pycparser=2.20
-  - pydantic=1.8.2
-  - pyopenssl=20.0.1
-  - pyparsing=2.4.7
-  - pyphen=0.11.0
-  - pysocks=1.7.1
-  - python=3.8.10
-  - python-dateutil=2.8.2
-  - python-json-logger=2.0.1
-  - python_abi=3.8
-  - readline=8.1
-  - requests=2.26.0
-  - scikit-learn=0.24.2
-  - scipy=1.7.0
-  - setuptools=49.6.0
-  - shellingham=1.4.0
-  - six=1.16.0
-  - smart_open=5.1.0
-  - spacy=3.1.0
-  - spacy-legacy=3.0.8
-  - sqlite=3.36.0
-  - srsly=2.4.1
-  - textacy=0.11.0
-  - thinc=8.0.7
-  - threadpoolctl=2.2.0
-  - tk=8.6.10
-  - toolz=0.11.1
-  - tornado=6.1
-  - tqdm=4.61.2
-  - typer=0.3.2
-  - typing-extensions=3.10.0.0
-  - typing_extensions=3.10.0.0
-  - urllib3=1.26.6
-  - uwsgi=2.0.19.1
-  - wasabi=0.8.2
-  - werkzeug=2.0.1
-  - wheel=0.36.2
-  - xz=5.2.5
-  - yaml=0.2.5
-  - zlib=1.2.11
-  - zstd=1.5.0
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - aiohappyeyeballs=2.6.1=pyhd8ed1ab_0
+  - aiohttp=3.12.8=py310h89163eb_0
+  - aiosignal=1.3.2=pyhd8ed1ab_0
+  - annotated-types=0.7.0=pyhd8ed1ab_1
+  - async-timeout=5.0.1=pyhd8ed1ab_1
+  - attrs=25.3.0=pyh71513ae_0
+  - blinker=1.9.0=pyhff2d567_0
+  - brotli-python=1.1.0=py310hf71b8c6_3
+  - bzip2=1.0.8=h4bc722e_7
+  - ca-certificates=2025.4.26=hbd8a1cb_0
+  - catalogue=2.0.10=py310hff52083_1
+  - certifi=2025.4.26=pyhd8ed1ab_0
+  - cffi=1.17.1=py310h8deb56e_0
+  - charset-normalizer=3.4.2=pyhd8ed1ab_0
+  - click=8.2.1=pyh707e725_0
+  - cloudpathlib=0.21.1=pyhd8ed1ab_0
+  - cloudpickle=3.1.1=pyhd8ed1ab_0
+  - colorama=0.4.6=pyhd8ed1ab_1
+  - confection=0.1.5=pyhecae5ae_0
+  - cymem=2.0.11=py310hf71b8c6_0
+  - daiquiri=3.0.0=pyhd3deb0d_0
+  - flask=3.1.1=pyhd8ed1ab_0
+  - frozenlist=1.6.0=py310h0a1d07c_0
+  - h2=4.2.0=pyhd8ed1ab_0
+  - hpack=4.1.0=pyhd8ed1ab_0
+  - hyperframe=6.1.0=pyhd8ed1ab_0
+  - icu=73.2=h59595ed_0
+  - idna=3.10=pyhd8ed1ab_1
+  - importlib-metadata=8.7.0=pyhe01879c_1
+  - itsdangerous=2.2.0=pyhd8ed1ab_1
+  - jansson=2.14.1=hb9d3cd8_0
+  - jinja2=3.1.6=pyhd8ed1ab_0
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.21.3=h659f571_0
+  - langcodes=3.4.1=pyhd8ed1ab_1
+  - language-data=1.3.0=pyhff2d567_0
+  - ld_impl_linux-64=2.43=h712a8e2_4
+  - libblas=3.9.0=31_h59b9bed_openblas
+  - libcblas=3.9.0=31_he106b2a_openblas
+  - libedit=3.1.20250104=pl5321h7949ede_0
+  - libffi=3.4.6=h2dba641_1
+  - libgcc=15.1.0=h767d61c_2
+  - libgcc-ng=15.1.0=h69a702a_2
+  - libgfortran=15.1.0=h69a702a_2
+  - libgfortran5=15.1.0=hcea5267_2
+  - libgomp=15.1.0=h767d61c_2
+  - liblapack=3.9.0=31_h7ac8fdf_openblas
+  - liblzma=5.8.1=hb9d3cd8_2
+  - liblzma-devel=5.8.1=hb9d3cd8_2
+  - libnsl=2.0.1=hd590300_0
+  - libopenblas=0.3.29=pthreads_h94d23a6_0
+  - libpq=15.7=h088ca5b_0
+  - libsqlite=3.46.0=hde9e2c9_0
+  - libstdcxx=15.1.0=h8f9b012_2
+  - libstdcxx-ng=15.1.0=h4852527_2
+  - libuuid=2.38.1=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxml2=2.13.8=hfdd30dd_0
+  - libxslt=1.1.39=h76b75d6_0
+  - libzlib=1.2.13=h4ab18f5_6
+  - lxml=5.2.2=py310h6a33d3d_0
+  - marisa-trie=1.2.1=py310hf71b8c6_0
+  - markdown-it-py=3.0.0=pyhd8ed1ab_1
+  - markupsafe=3.0.2=py310h89163eb_1
+  - mdurl=0.1.2=pyhd8ed1ab_1
+  - multidict=6.4.4=py310h89163eb_0
+  - murmurhash=1.0.10=py310hf71b8c6_2
+  - ncurses=6.5=h2d0b736_3
+  - numpy=2.2.6=py310hefbff90_0
+  - openssl=3.5.0=h7b32b05_1
+  - packaging=25.0=pyh29332c3_1
+  - pcre=8.45=h9c3ff4c_0
+  - pip=25.1.1=pyh8b19718_0
+  - preshed=3.0.9=py310hf71b8c6_2
+  - propcache=0.3.1=py310h89163eb_0
+  - psycopg2=2.9.3=py310h416cc33_2
+  - pycparser=2.22=pyh29332c3_1
+  - pydantic=2.11.4=pyh3cfb1c2_0
+  - pydantic-core=2.33.2=py310hbcd0ec0_0
+  - pygments=2.19.1=pyhd8ed1ab_0
+  - pysocks=1.7.1=pyha55dd90_7
+  - python=3.10.14=hd12c33a_0_cpython
+  - python-json-logger=2.0.7=pyhd8ed1ab_0
+  - python_abi=3.10=7_cp310
+  - readline=8.2=h8c095d6_2
+  - requests=2.32.4=pyhd8ed1ab_0
+  - rich=14.0.0=pyh29332c3_0
+  - setuptools=80.9.0=pyhff2d567_0
+  - shellingham=1.5.4=pyhd8ed1ab_1
+  - smart-open=7.1.0=hd8ed1ab_0
+  - smart_open=7.1.0=pyhd8ed1ab_0
+  - spacy=3.8.6=py310ha2bacc8_0
+  - spacy-legacy=3.0.12=pyhd8ed1ab_0
+  - spacy-loggers=1.0.5=pyhd8ed1ab_0
+  - srsly=2.5.1=py310hf71b8c6_1
+  - tk=8.6.13=noxft_h4845f30_101
+  - tqdm=4.67.1=pyhd8ed1ab_1
+  - typer=0.16.0=pyh167b9f4_0
+  - typer-slim=0.16.0=pyhe01879c_0
+  - typer-slim-standard=0.16.0=hf964461_0
+  - typing-extensions=4.14.0=h32cad80_0
+  - typing-inspection=0.4.1=pyhd8ed1ab_0
+  - typing_extensions=4.14.0=pyhe01879c_0
+  - tzdata=2025b=h78e105d_0
+  - ujson=5.10.0=py310hf71b8c6_1
+  - unidecode=1.3.8=pyh29332c3_1
+  - urllib3=2.4.0=pyhd8ed1ab_0
+  - uwsgi=2.0.21=py310h32d3c7e_4
+  - wasabi=1.1.3=pyhd8ed1ab_1
+  - weasel=0.4.1=pyhd8ed1ab_2
+  - werkzeug=3.1.3=pyhd8ed1ab_1
+  - wheel=0.45.1=pyhd8ed1ab_1
+  - wrapt=1.17.2=py310ha75aee5_0
+  - xz=5.8.1=hbcc6ac9_2
+  - xz-gpl-tools=5.8.1=hbcc6ac9_2
+  - xz-tools=5.8.1=hb9d3cd8_2
+  - yaml=0.2.5=h7f98852_2
+  - yarl=1.20.1=py310h89163eb_0
+  - zipp=3.23.0=pyhd8ed1ab_0
+  - zlib=1.2.13=h4ab18f5_6
+  - zstandard=0.23.0=py310ha75aee5_2
   - pip:
-    - dominate==2.6.0
-    - flask-bootstrap==3.3.7.1
-    - metapype==0.0.3
-    - recordclass==0.14.3
-    - rfc3986==1.5.0
-    - visitor==0.1.3
-prefix: /home/servilla/anaconda3/envs/umbra
+      - blis==1.3.0
+      - cachetools==6.0.0
+      - cytoolz==1.0.1
+      - dominate==2.9.1
+      - flask-bootstrap==3.3.7.1
+      - floret==0.10.5
+      - jellyfish==1.2.0
+      - joblib==1.5.1
+      - metapype==0.0.26
+      - networkx==3.4.2
+      - pyphen==0.17.2
+      - rfc3986==2.0.0
+      - scikit-learn==1.7.0
+      - scipy==1.15.3
+      - textacy==0.13.0
+      - thinc==8.3.6
+      - threadpoolctl==3.6.0
+      - toolz==1.0.0
+      - visitor==0.1.3
+prefix: /home/servilla/miniconda3/envs/umbra
