--- a/requirements.txt
+++ b/requirements.txt
@@ -1,87 +1,94 @@
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiosignal==1.3.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.8
+aiosignal==1.3.2
 annotated-types==0.7.0
-attrs==24.2.0
-blinker==1.8.2
-blis==0.7.10
+async-timeout==5.0.1
+attrs==25.3.0
+blinker==1.9.0
+blis==1.3.0
 Brotli==1.1.0
-cachetools==5.5.0
+cachetools==6.0.0
 catalogue==2.0.10
-certifi==2024.8.30
-cffi==1.17.0
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.16.0
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+cloudpathlib==0.21.1
+cloudpickle==3.1.1
 colorama==0.4.6
-confection==0.1.4
-cymem==2.0.8
-cytoolz==0.12.3
+confection==0.1.5
+cymem==2.0.11
+cytoolz==1.0.1
 daiquiri==3.0.0
 dominate==2.9.1
-Flask==3.0.3
+Flask==3.1.1
 Flask-Bootstrap==3.3.7.1
 floret==0.10.5
-frozenlist==1.4.1
-h2==4.1.0
-hpack==4.0.0
-hyperframe==6.0.1
-idna==3.8
-importlib_metadata==8.4.0
+frozenlist==1.6.0
+h2==4.2.0
+hpack==4.1.0
+hyperframe==6.1.0
+idna==3.10
+importlib_metadata==8.7.0
 itsdangerous==2.2.0
-jellyfish==1.1.0
-Jinja2==3.1.4
-joblib==1.4.2
-langcodes==3.4.0
-language_data==1.2.0
-lxml==5.3.0
-marisa-trie==1.1.0
+jellyfish==1.2.0
+Jinja2==3.1.6
+joblib==1.5.1
+langcodes==3.4.1
+language_data==1.3.0
+lxml==5.2.2
+marisa-trie==1.2.1
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
+MarkupSafe==3.0.2
 mdurl==0.1.2
-metapype==0.1.1
-multidict==6.0.5
+metapype==0.0.26
+multidict==6.4.4
 murmurhash==1.0.10
-networkx==3.3
-numpy==1.26.4
-packaging==24.1
-pip==24.2
+networkx==3.4.2
+numpy==2.2.6
+packaging==25.0
+pip==25.1.1
 preshed==3.0.9
-psycopg2==2.9.9
+propcache==0.3.1
+psycopg2==2.9.3
 pycparser==2.22
-pydantic==2.8.2
-pydantic_core==2.20.1
-Pygments==2.18.0
-pyphen==0.16.0
+pydantic==2.11.4
+pydantic_core==2.33.2
+Pygments==2.19.1
+pyphen==0.17.2
 PySocks==1.7.1
 python-json-logger==2.0.7
-requests==2.32.3
+requests==2.32.4
 rfc3986==2.0.0
-rich==13.7.1
-scikit-learn==1.5.1
-scipy==1.14.1
-setuptools==72.2.0
+rich==14.0.0
+scikit-learn==1.7.0
+scipy==1.15.3
+setuptools==80.9.0
 shellingham==1.5.4
-smart-open==6.4.0
-spacy==3.7.2
+smart_open==7.1.0
+spacy==3.8.6
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
-srsly==2.4.8
+srsly==2.5.1
 textacy==0.13.0
-thinc==8.2.5
-threadpoolctl==3.5.0
-toolz==0.12.1
-tqdm==4.66.5
-typer==0.9.4
-typing_extensions==4.12.2
+thinc==8.3.6
+threadpoolctl==3.6.0
+toolz==1.0.0
+tqdm==4.67.1
+typer==0.16.0
+typer-slim==0.16.0
+typing_extensions==4.14.0
+typing-inspection==0.4.1
+ujson==5.10.0
 Unidecode==1.3.8
-urllib3==2.2.2
-uWSGI==2.0.23
+urllib3==2.4.0
+uWSGI==2.0.21
 visitor==0.1.3
-wasabi==1.1.2
-weasel==0.3.4
-Werkzeug==3.0.4
-wheel==0.44.0
-yarl==1.9.7
-zipp==3.20.1
+wasabi==1.1.3
+weasel==0.4.1
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.2
+yarl==1.20.1
+zipp==3.23.0
 zstandard==0.23.0
