--- a/environment.yml
+++ b/environment.yml
@@ -3,132 +3,128 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - aiohappyeyeballs=2.6.1=pyhd8ed1ab_0
-  - aiohttp=3.12.8=py310h89163eb_0
-  - aiosignal=1.3.2=pyhd8ed1ab_0
-  - annotated-types=0.7.0=pyhd8ed1ab_1
-  - async-timeout=5.0.1=pyhd8ed1ab_1
-  - attrs=25.3.0=pyh71513ae_0
-  - blinker=1.9.0=pyhff2d567_0
-  - brotli-python=1.1.0=py310hf71b8c6_3
-  - bzip2=1.0.8=h4bc722e_7
-  - ca-certificates=2025.4.26=hbd8a1cb_0
-  - catalogue=2.0.10=py310hff52083_1
-  - certifi=2025.4.26=pyhd8ed1ab_0
-  - cffi=1.17.1=py310h8deb56e_0
-  - charset-normalizer=3.4.2=pyhd8ed1ab_0
-  - click=8.2.1=pyh707e725_0
-  - cloudpathlib=0.21.1=pyhd8ed1ab_0
-  - cloudpickle=3.1.1=pyhd8ed1ab_0
-  - colorama=0.4.6=pyhd8ed1ab_1
-  - confection=0.1.5=pyhecae5ae_0
-  - cymem=2.0.11=py310hf71b8c6_0
-  - daiquiri=3.0.0=pyhd3deb0d_0
-  - flask=3.1.1=pyhd8ed1ab_0
-  - frozenlist=1.6.0=py310h0a1d07c_0
-  - h2=4.2.0=pyhd8ed1ab_0
-  - hpack=4.1.0=pyhd8ed1ab_0
-  - hyperframe=6.1.0=pyhd8ed1ab_0
-  - icu=73.2=h59595ed_0
-  - idna=3.10=pyhd8ed1ab_1
-  - importlib-metadata=8.7.0=pyhe01879c_1
-  - itsdangerous=2.2.0=pyhd8ed1ab_1
-  - jansson=2.14.1=hb9d3cd8_0
-  - jinja2=3.1.6=pyhd8ed1ab_0
-  - keyutils=1.6.1=h166bdaf_0
-  - krb5=1.21.3=h659f571_0
-  - langcodes=3.4.1=pyhd8ed1ab_1
-  - language-data=1.3.0=pyhff2d567_0
-  - ld_impl_linux-64=2.43=h712a8e2_4
-  - libblas=3.9.0=31_h59b9bed_openblas
-  - libcblas=3.9.0=31_he106b2a_openblas
-  - libedit=3.1.20250104=pl5321h7949ede_0
-  - libffi=3.4.6=h2dba641_1
-  - libgcc=15.1.0=h767d61c_2
-  - libgcc-ng=15.1.0=h69a702a_2
-  - libgfortran=15.1.0=h69a702a_2
-  - libgfortran5=15.1.0=hcea5267_2
-  - libgomp=15.1.0=h767d61c_2
-  - liblapack=3.9.0=31_h7ac8fdf_openblas
-  - liblzma=5.8.1=hb9d3cd8_2
-  - liblzma-devel=5.8.1=hb9d3cd8_2
-  - libnsl=2.0.1=hd590300_0
-  - libopenblas=0.3.29=pthreads_h94d23a6_0
-  - libpq=15.7=h088ca5b_0
-  - libsqlite=3.46.0=hde9e2c9_0
-  - libstdcxx=15.1.0=h8f9b012_2
-  - libstdcxx-ng=15.1.0=h4852527_2
-  - libuuid=2.38.1=h0b41bf4_0
-  - libxcrypt=4.4.36=hd590300_1
-  - libxml2=2.13.8=hfdd30dd_0
-  - libxslt=1.1.39=h76b75d6_0
-  - libzlib=1.2.13=h4ab18f5_6
-  - lxml=5.2.2=py310h6a33d3d_0
-  - marisa-trie=1.2.1=py310hf71b8c6_0
-  - markdown-it-py=3.0.0=pyhd8ed1ab_1
-  - markupsafe=3.0.2=py310h89163eb_1
-  - mdurl=0.1.2=pyhd8ed1ab_1
-  - multidict=6.4.4=py310h89163eb_0
-  - murmurhash=1.0.10=py310hf71b8c6_2
-  - ncurses=6.5=h2d0b736_3
-  - numpy=2.2.6=py310hefbff90_0
-  - openssl=3.5.0=h7b32b05_1
-  - packaging=25.0=pyh29332c3_1
-  - pcre=8.45=h9c3ff4c_0
-  - pip=25.1.1=pyh8b19718_0
-  - preshed=3.0.9=py310hf71b8c6_2
-  - propcache=0.3.1=py310h89163eb_0
-  - psycopg2=2.9.3=py310h416cc33_2
-  - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.11.4=pyh3cfb1c2_0
-  - pydantic-core=2.33.2=py310hbcd0ec0_0
-  - pygments=2.19.1=pyhd8ed1ab_0
-  - pysocks=1.7.1=pyha55dd90_7
-  - python=3.10.14=hd12c33a_0_cpython
-  - python-json-logger=2.0.7=pyhd8ed1ab_0
-  - python_abi=3.10=7_cp310
-  - readline=8.2=h8c095d6_2
-  - requests=2.32.4=pyhd8ed1ab_0
-  - rich=14.0.0=pyh29332c3_0
-  - setuptools=80.9.0=pyhff2d567_0
-  - shellingham=1.5.4=pyhd8ed1ab_1
-  - smart-open=7.1.0=hd8ed1ab_0
-  - smart_open=7.1.0=pyhd8ed1ab_0
-  - spacy=3.8.6=py310ha2bacc8_0
-  - spacy-legacy=3.0.12=pyhd8ed1ab_0
-  - spacy-loggers=1.0.5=pyhd8ed1ab_0
-  - srsly=2.5.1=py310hf71b8c6_1
-  - tk=8.6.13=noxft_h4845f30_101
-  - tqdm=4.67.1=pyhd8ed1ab_1
-  - typer=0.16.0=pyh167b9f4_0
-  - typer-slim=0.16.0=pyhe01879c_0
-  - typer-slim-standard=0.16.0=hf964461_0
-  - typing-extensions=4.14.0=h32cad80_0
-  - typing-inspection=0.4.1=pyhd8ed1ab_0
-  - typing_extensions=4.14.0=pyhe01879c_0
-  - tzdata=2025b=h78e105d_0
-  - ujson=5.10.0=py310hf71b8c6_1
-  - unidecode=1.3.8=pyh29332c3_1
-  - urllib3=2.4.0=pyhd8ed1ab_0
-  - uwsgi=2.0.21=py310h32d3c7e_4
-  - wasabi=1.1.3=pyhd8ed1ab_1
-  - weasel=0.4.1=pyhd8ed1ab_2
-  - werkzeug=3.1.3=pyhd8ed1ab_1
-  - wheel=0.45.1=pyhd8ed1ab_1
-  - wrapt=1.17.2=py310ha75aee5_0
-  - xz=5.8.1=hbcc6ac9_2
-  - xz-gpl-tools=5.8.1=hbcc6ac9_2
-  - xz-tools=5.8.1=hb9d3cd8_2
-  - yaml=0.2.5=h7f98852_2
-  - yarl=1.20.1=py310h89163eb_0
-  - zipp=3.23.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h4ab18f5_6
-  - zstandard=0.23.0=py310ha75aee5_2
+  - _openmp_mutex=4.5
+  - aiohappyeyeballs=2.6.1
+  - aiohttp=3.12.13
+  - aiosignal=1.4.0
+  - annotated-types=0.7.0
+  - async-timeout=5.0.1
+  - attrs=25.3.0
+  - blinker=1.9.0
+  - brotli-python=1.1.0
+  - bzip2=1.0.8
+  - ca-certificates=2025.7.9
+  - catalogue=2.0.10
+  - certifi=2025.6.15
+  - cffi=1.17.1
+  - charset-normalizer=3.4.2
+  - click=8.2.1
+  - cloudpathlib=0.21.1
+  - cloudpickle=3.1.1
+  - colorama=0.4.6
+  - confection=0.1.5
+  - cymem=2.0.11
+  - cython-blis=1.3.0
+  - daiquiri=3.0.0
+  - flask=3.1.1
+  - frozenlist=1.6.0
+  - h2=4.2.0
+  - hpack=4.1.0
+  - hyperframe=6.1.0
+  - icu=73.2
+  - idna=3.10
+  - importlib-metadata=8.7.0
+  - itsdangerous=2.2.0
+  - jansson=2.14.1
+  - jinja2=3.1.6
+  - keyutils=1.6.1
+  - krb5=1.21.3
+  - langcodes=3.3.0
+  - ld_impl_linux-aarch64=2.44
+  - libblas=3.9.0
+  - libcblas=3.9.0
+  - libedit=3.1.20250104
+  - libffi=3.4.6
+  - libgcc=15.1.0
+  - libgcc-ng=15.1.0
+  - libgfortran=15.1.0
+  - libgfortran5=15.1.0
+  - libgomp=15.1.0
+  - liblapack=3.9.0
+  - liblzma=5.8.1
+  - liblzma-devel=5.8.1
+  - libnsl=2.0.1
+  - libopenblas=0.3.30
+  - libpq=15.7
+  - libsqlite=3.46.0
+  - libstdcxx=15.1.0
+  - libstdcxx-ng=15.1.0
+  - libuuid=2.38.1
+  - libxcrypt=4.4.36
+  - libxml2=2.13.8
+  - libxslt=1.1.39
+  - libzlib=1.2.13
+  - lxml=5.2.2
+  - markdown-it-py=3.0.0
+  - markupsafe=3.0.2
+  - mdurl=0.1.2
+  - multidict=6.6.3
+  - murmurhash=1.0.10
+  - ncurses=6.5
+  - numpy=2.2.6
+  - openssl=3.5.1
+  - packaging=25.0
+  - pcre=8.45
+  - pip=25.1.1
+  - preshed=3.0.9
+  - propcache=0.3.1
+  - psycopg2=2.9.3
+  - pycparser=2.22
+  - pydantic=2.11.7
+  - pydantic-core=2.33.2
+  - pygments=2.19.2
+  - pysocks=1.7.1
+  - python=3.10.14
+  - python-json-logger=2.0.7
+  - python_abi=3.10
+  - readline=8.2
+  - requests=2.32.4
+  - rich=14.0.0
+  - setuptools=80.9.0
+  - shellingham=1.5.4
+  - spacy=3.8.7
+  - spacy-legacy=3.0.12
+  - spacy-loggers=1.0.5
+  - srsly=2.5.1
+  - thinc=8.3.6
+  - tk=8.6.13
+  - tqdm=4.67.1
+  - typer=0.16.0
+  - typer-slim=0.16.0
+  - typer-slim-standard=0.16.0
+  - typing-extensions=4.14.1
+  - typing-inspection=0.4.1
+  - typing_extensions=4.14.1
+  - tzdata=2025b
+  - ujson=5.10.0
+  - unidecode=1.3.8
+  - urllib3=2.5.0
+  - uwsgi=2.0.21
+  - wasabi=1.1.3
+  - weasel=0.4.1
+  - werkzeug=3.1.3
+  - wheel=0.45.1
+  - wrapt=1.17.2
+  - xz=5.8.1
+  - xz-gpl-tools=5.8.1
+  - xz-tools=5.8.1
+  - yaml=0.2.5
+  - yarl=1.20.1
+  - zipp=3.23.0
+  - zlib=1.2.13
+  - zstandard=0.23.0
   - pip:
-      - blis==1.3.0
-      - cachetools==6.0.0
+      - cachetools==6.1.0
       - cytoolz==1.0.1
       - dominate==2.9.1
       - flask-bootstrap==3.3.7.1
@@ -141,9 +137,9 @@ dependencies:
       - rfc3986==2.0.0
       - scikit-learn==1.7.0
       - scipy==1.15.3
+      - smart-open==7.3.0.post1
       - textacy==0.13.0
-      - thinc==8.3.6
       - threadpoolctl==3.6.0
       - toolz==1.0.0
       - visitor==0.1.3
-prefix: /home/servilla/miniconda3/envs/umbra
+prefix: /home/pasta/miniconda3/envs/umbra
