--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 aiohappyeyeballs==2.6.1
-aiohttp==3.12.8
-aiosignal==1.3.2
+aiohttp==3.12.13
+aiosignal==1.4.0
 annotated-types==0.7.0
 async-timeout==5.0.1
 attrs==25.3.0
 blinker==1.9.0
 blis==1.3.0
 Brotli==1.1.0
-cachetools==6.0.0
+cachetools==6.1.0
 catalogue==2.0.10
-certifi==2025.4.26
+certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
@@ -34,15 +34,13 @@ itsdangerous==2.2.0
 jellyfish==1.2.0
 Jinja2==3.1.6
 joblib==1.5.1
-langcodes==3.4.1
-language_data==1.3.0
+langcodes==3.3.0
 lxml==5.2.2
-marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 metapype==0.0.26
-multidict==6.4.4
+multidict==6.6.3
 murmurhash==1.0.10
 networkx==3.4.2
 numpy==2.2.6
@@ -52,9 +50,9 @@ preshed==3.0.9
 propcache==0.3.1
 psycopg2==2.9.3
 pycparser==2.22
-pydantic==2.11.4
+pydantic==2.11.7
 pydantic_core==2.33.2
-Pygments==2.19.1
+Pygments==2.19.2
 pyphen==0.17.2
 PySocks==1.7.1
 python-json-logger==2.0.7
@@ -65,8 +63,8 @@ scikit-learn==1.7.0
 scipy==1.15.3
 setuptools==80.9.0
 shellingham==1.5.4
-smart_open==7.1.0
-spacy==3.8.6
+smart_open==7.3.0.post1
+spacy==3.8.7
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.5.1
@@ -77,11 +75,11 @@ toolz==1.0.0
 tqdm==4.67.1
 typer==0.16.0
 typer-slim==0.16.0
-typing_extensions==4.14.0
+typing_extensions==4.14.1
 typing-inspection==0.4.1
 ujson==5.10.0
 Unidecode==1.3.8
-urllib3==2.4.0
+urllib3==2.5.0
 uWSGI==2.0.21
 visitor==0.1.3
 wasabi==1.1.3
